fix: update logo and product name

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,9 +4,9 @@ repo: status_monitor # Your Github repository name
 
 # Add your sites here
 sites:
-  - name: Waypath App
+  - name: AgriDigital Onfarm App
     url: https://app.waypath.io
-  - name: Waypath Insights App
+  - name: AgriDigital Insights App
     url: https://insights-api.waypath.io/api/health
   - name: OUS Service
     url: https://api.waypath.io/ous/health-monitor
@@ -76,14 +76,14 @@ status-website:
   # cname: status.waypath.io
   # Uncomment the following line if you don't have a custom domain and add your repo name
   # baseUrl: /status_monitor
-  logoUrl: https://assets.website-files.com/5f33c7d6c091c28614d610eb/5f33c7d6c091c29dd3d61320_AgriDigital_Logo_FULL_LOCKUP_BLUE_TEXT.png
+  logoUrl: https://agridigital-public-media.s3.us-east-2.amazonaws.com/media/AgriDigital_Lockup_Horizontal_Colour.png
   cname: status.waypath.io # Custom CNAME
-  name: Waypath Status Monitor
+  name: AgriDigital Onfarm Status Monitor
   # introTitle: "Waypath Status Monitor provides a quick look at our services and the uptime"
   navbar:
     - title: Status
       href: /
-    - title: Waypath App
+    - title: AgriDigital Onfarm App
       href: https://app.waypath.io
     - title: Knowledge Base
       href: https://knowledgebase.waypath.io/
