fix: added favicon

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -77,6 +77,7 @@ status-website:
   # Uncomment the following line if you don't have a custom domain and add your repo name
   # baseUrl: /status_monitor
   logoUrl: https://agridigital-public-media.s3.us-east-2.amazonaws.com/media/Onfarm_Lockup_Horizontal_Colour.png
+  favicon: https://agridigital-public-media.s3.us-east-2.amazonaws.com/media/Onfarm_Icon_Colour.png
   cname: status.waypath.io # Custom CNAME
   name: AgriDigital Onfarm Status Monitor
   # introTitle: "AgriDigital Onfarm Status Monitor provides a quick look at our services and the uptime"
