--- a/.github/workflows/banner.yml
+++ b/.github/workflows/banner.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   open_issue:
     name: Build
-    runs-on: [self-hosted, Linux, X64, runner1, dev]
+    runs-on: ubuntu-18.04
     if: ${{ github.event.action == 'opened' && contains(github.event.issue.labels.*.name, 'BANNER') }}
 
     steps:
@@ -65,7 +65,7 @@ jobs:
 
   close_issue:
     name: Build
-    runs-on: [self-hosted, Linux, X64, runner1, dev]
+    runs-on: ubuntu-18.04
     if: ${{ github.event.action == 'closed' && contains(github.event.issue.labels.*.name, 'BANNER') }}
 
     steps:
